Bug 503703 - With qt 6.9.0 simple scrolling crashes the apps (and plasmashell)
Summary: With qt 6.9.0 simple scrolling crashes the apps (and plasmashell)
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kirigami
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 6.14.0
Platform: Fedora RPMs Linux
: VHI grave
Target Milestone: 1.0
Assignee: kdelibs bugs
URL:
Keywords:
: 504061 504070 504074 504088 504093 504113 504118 504130 504160 504172 504178 504190 504195 504196 504245 504261 504262 504378 504477 504478 504479 504480 504481 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-05-03 10:08 UTC by slartibart70
Modified: 2025-05-18 17:46 UTC (History)
23 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.14.1
Sentry Crash Report:


Attachments
coredump-gdb (8.35 KB, text/plain)
2025-05-04 10:26 UTC, slartibart70
Details

Note You need to log in before you can comment on or make changes to this bug.
Description slartibart70 2025-05-03 10:08:44 UTC
Use the current git-version of plasma 6.4-devel
Open discover, or kinfocenter
Select a panel where you can scroll (discover: installed apps, kinfocenter: opencl or similar)

Using the keyboard inside these scrollable panels works, but using the touchpad or the mouse scroll wheel immediately crashes the apps. Interestingly, clicking into the scrollbar also works ok.

This also happens in the scrollable view of drKonqi if it has a chance to popup after thos crashes above (which sometimes does not work)
Comment 1 slartibart70 2025-05-03 10:09:25 UTC
Operating System: Fedora Linux 42
KDE Plasma Version: 6.3.80
KDE Frameworks Version: 6.14.0
Qt Version: 6.9.0
Comment 2 slartibart70 2025-05-03 10:21:28 UTC
this is mainly a problem with qt 6.9.0
i tried downgrading to 6.8.2 (yeah, breaks other things) but then the scrolling works again
Comment 3 slartibart70 2025-05-03 10:24:57 UTC
uh-oh,

it's even worse: opening the klipper in the taskbar and scrolling the contents crashes the whole plasmashell...


please investigate
Comment 4 slartibart70 2025-05-04 10:26:04 UTC
Created attachment 180922 [details]
coredump-gdb
Comment 5 slartibart70 2025-05-04 10:30:51 UTC
before generating the report, i did clean the QML cache:
find ${XDG_CACHE_HOME:-$HOME/.cache}/**/qmlcache -type f -delete

This alone did not help

The coredump is of kinfocenter when scrolling in the opencl window

but, systemsettings (left side panel) scrolling is also sufficient to crash the app
Comment 6 slartibart70 2025-05-04 10:48:57 UTC
With the help of solopasha we identified kf6-kirigami a the culprit:

dnf downgrade kf6-kirigami-6.13.0

fixes the scrolling problem in all the apps, even klipper-applet

Still, this is a nasty bug in kf6-kirigami-6.15.0 (and also in 6.14 which i tried first)
Comment 7 slartibart70 2025-05-04 17:26:33 UTC
Again, solopasha provided some test-builds, conclusion:

Reverting 
https://invent.kde.org/frameworks/kirigami/-/commit/fb21ee822f448136bfa032e0da5faca6ffc82b72 

fixes the issue
Comment 8 slartibart70 2025-05-04 17:28:54 UTC
if i may add my 2cents to error-handling in plasmashell:

i personally think the whole error-handling seems broken - if a scrolling error leads to a plasma crash (ok, at least with auto-restart) then this doesn't look that good for the software-architecture...

I would accept apps not doing proper handling and crashing, but the plasmashell? This should be a bit more relaxed about such errors, don't you think?
Comment 9 slartibart70 2025-05-06 12:51:18 UTC
one thing is interesting btw,

on another older laptop (lenovo t420) upgraded to fc42, plasma6.4-devel repos and a distro-sync (i.e. with kf6-kirigami-6.15.0~2.gitb782953-1.fc42.x86_64) all is fine, no scrolling problems

Only on the lenovo t470p i do need the patch/revert of kirigami.
It's also independent of scaling factors (i had 110%, tested with 100%): the 6.15.0-2 version always causes a crash when scrolling
Comment 10 John Kizer 2025-05-09 19:33:49 UTC
Hi - I can't reproduce this in Plasma (6.3.80) and Frameworks (6.15.0) built from git master today (May 9th), using Qt 6.9.0. Can you still reproduce this?

Thanks!
Comment 11 slartibart70 2025-05-10 08:04:10 UTC
i did a fresh update, using 
kf6-kirigami-6.15.0~8.gitd803ca3-1.fc42.x86_64

and... the problem seems fixed, at least no crashes in my initial tests

What did you fix/what was the underlying cause?
Comment 12 slartibart70 2025-05-10 08:06:51 UTC
even in infocenter > interrupts:

up/down and left/right scrolling work flawlessly :-D
(can't crash it any more even when using 'wild' gesture-inputs)
Comment 13 John Kizer 2025-05-10 15:30:43 UTC
Great! I'm not a Frameworks developer, just doing bug triage - but glad it's working now!
Comment 14 John Kizer 2025-05-12 19:08:24 UTC
*** Bug 504074 has been marked as a duplicate of this bug. ***
Comment 15 John Kizer 2025-05-12 19:09:14 UTC
*** Bug 504061 has been marked as a duplicate of this bug. ***
Comment 16 John Kizer 2025-05-12 19:11:00 UTC
*** Bug 504070 has been marked as a duplicate of this bug. ***
Comment 17 John Kizer 2025-05-12 19:13:34 UTC
*** Bug 504088 has been marked as a duplicate of this bug. ***
Comment 18 John Kizer 2025-05-12 19:13:39 UTC
*** Bug 504093 has been marked as a duplicate of this bug. ***
Comment 19 John Kizer 2025-05-12 19:13:44 UTC
*** Bug 504113 has been marked as a duplicate of this bug. ***
Comment 20 John Kizer 2025-05-12 19:14:54 UTC
Checking with folks on what seems to be the relevant merge request - https://invent.kde.org/frameworks/kirigami/-/merge_requests/1773 - since this appears to have been present in the released Frameworks 6.14.
Comment 21 Nate Graham 2025-05-12 19:37:21 UTC
That fixed it? Or that broke it?
Comment 22 John Kizer 2025-05-12 19:39:25 UTC
It seems like the change in that MR broke it, based on the reporter's investigation here.
Comment 23 Nate Graham 2025-05-12 19:41:07 UTC
And do we know what fixed it?
Comment 24 Antonio Rojas 2025-05-12 20:19:52 UTC
*** Bug 504118 has been marked as a duplicate of this bug. ***
Comment 25 John Kizer 2025-05-12 20:25:05 UTC
No - and for what it's worth, the issue doesn't seem to reproduce on a Neon VM with Frameworks 6.14 - that VM doesn't have GPU acceleration, though, which might make a difference?
Comment 26 daron439 2025-05-12 20:42:33 UTC
It was "fixed" by disabling GLIBCXX_ASSERTIONS, that’s not the correct fix, the issue is still present in master.
Comment 27 daron439 2025-05-12 20:45:52 UTC
(In reply to daron439 from comment #26)
> It was "fixed" by disabling GLIBCXX_ASSERTIONS, that’s not the correct fix,
> the issue is still present in master.

(Disabling in the repository package, not in kirigami upstream)
Comment 28 Nate Graham 2025-05-12 20:54:15 UTC
#9  0x00007f793900b086 in std::__glibcxx_assert_fail
    (file=<optimized out>, line=<optimized out>, function=<optimized out>, condition=<optimized out>)
    at ../../../../../libstdc++-v3/src/c++11/assert_fail.cc:41
#10 0x00007f79040981c5 in WheelHandler::scrollFlickable(QPointF, QPointF, QFlags<Qt::KeyboardModifier>)::{lambda(double, double, double, char const*, QPropertyAnimation&)#1}::operator()(double, double, double, char const*, QPropertyAnimation&) const [clone .cold] () at /lib64/libKirigami.so.6
Comment 29 Nate Graham 2025-05-12 20:55:15 UTC
I bet it's the std::clamp, which apparently can assert now (how rude)
Comment 30 John Kizer 2025-05-12 21:06:26 UTC
Marking as confirmed based on the number of reports
Comment 31 Bug Janitor Service 2025-05-12 21:29:27 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kirigami/-/merge_requests/1803
Comment 32 Noah Davis 2025-05-12 22:20:28 UTC
Git commit d373ee15e51a42a110309baed6c321126d5acfeb by Noah Davis.
Committed on 12/05/2025 at 21:24.
Pushed by ndavis into branch 'master'.

WheelHandler: remove std::clamp assert crash

M  +3    -3    src/wheelhandler.cpp

https://invent.kde.org/frameworks/kirigami/-/commit/d373ee15e51a42a110309baed6c321126d5acfeb
Comment 33 daron439 2025-05-12 22:40:08 UTC
it still crashes, unfortunately:

#9  0x00007f8c8e60b086 in std::__glibcxx_assert_fail (file=<optimized out>, line=<optimized out>, function=<optimized out>, condition=<optimized out>)
    at ../../../../../libstdc++-v3/src/c++11/assert_fail.cc:41
#10 0x00007f8c600eb3e9 in std::clamp<int> (__val=@0x7ffdc5302108: 18, __lo=@0x7ffdc530210c: 50, __hi=@0x7ffdc5302110: 18) at /usr/include/c++/15/bits/stl_algo.h:3638
#11 0x00007f8c600e6100 in operator() (__closure=0x7ffdc5302290, oldPos=-0, newPos=60, stepSize=60, property=0x7f8c600ffef1 "contentY", animation=...)
    at /usr/src/debug/kf6-kirigami-6.15.0~12.git0b08558-1.fc42.x86_64/src/wheelhandler.cpp:528
#12 0x00007f8c600e6bd4 in WheelHandler::scrollFlickable (this=0x55b344d6ee90, pixelDelta=..., angleDelta=..., modifiers=...)
    at /usr/src/debug/kf6-kirigami-6.15.0~12.git0b08558-1.fc42.x86_64/src/wheelhandler.cpp:548
#13 0x00007f8c600e78c3 in WheelHandler::eventFilter (this=0x55b344d6ee90, watched=0x55b344f6d9f0, event=0x7ffdc5302c80)
    at /usr/src/debug/kf6-kirigami-6.15.0~12.git0b08558-1.fc42.x86_64/src/wheelhandler.cpp:664
Comment 34 Nate Graham 2025-05-13 01:11:43 UTC
Sigh, it's the second clamp.
Comment 35 Nate Graham 2025-05-13 01:11:58 UTC
Can you test https://invent.kde.org/frameworks/kirigami/-/merge_requests/1804?
Comment 36 daron439 2025-05-13 05:29:38 UTC
(In reply to Nate Graham from comment #35)
> Can you test
> https://invent.kde.org/frameworks/kirigami/-/merge_requests/1804?

Works fine now, no crashes, thanks for the fix!
Comment 37 Antonio Rojas 2025-05-13 07:27:54 UTC
*** Bug 504130 has been marked as a duplicate of this bug. ***
Comment 38 Marcus Seyfarth 2025-05-13 08:34:50 UTC
I've also tested MR #1804 on top of kirigami-git on CachyOS, it seems to work fine. No crashes when scrolling in systemsettings any longer. Thanks for the fix!
Comment 39 chuxinyuan 2025-05-13 11:39:44 UTC
downgrade kirigami from 6.14.0 to 6.13.0, this problem has been solved.

I'm using the Arch Linux system. I hope to install the new version as soon as possible. I don't know how long it will take for the new version to be released.
Comment 40 Noah Davis 2025-05-13 14:23:18 UTC
Git commit 54a92465b5ddcd55a5dfdd16c5215ad0769615fc by Noah Davis.
Committed on 13/05/2025 at 13:57.
Pushed by ndavis into branch 'master'.

WheelHandler: remove std::clamp assert crash part 2

M  +1    -1    src/wheelhandler.cpp

https://invent.kde.org/frameworks/kirigami/-/commit/54a92465b5ddcd55a5dfdd16c5215ad0769615fc
Comment 41 Antonio Rojas 2025-05-13 16:09:18 UTC
*** Bug 504160 has been marked as a duplicate of this bug. ***
Comment 42 Nate Graham 2025-05-13 20:17:09 UTC
*** Bug 504172 has been marked as a duplicate of this bug. ***
Comment 43 Antonio Rojas 2025-05-13 21:04:01 UTC
*** Bug 504178 has been marked as a duplicate of this bug. ***
Comment 44 Antonio Rojas 2025-05-14 06:05:47 UTC
*** Bug 504190 has been marked as a duplicate of this bug. ***
Comment 45 Antonio Rojas 2025-05-14 06:40:15 UTC
*** Bug 504195 has been marked as a duplicate of this bug. ***
Comment 46 Kai Uwe Broulik 2025-05-14 09:40:01 UTC
*** Bug 504196 has been marked as a duplicate of this bug. ***
Comment 47 luminoso 2025-05-14 12:53:49 UTC
For anyone finding this a quick workaround was to set animation speed to 1/2 or to 3/4
Comment 48 Patrick Silva 2025-05-14 13:37:38 UTC
(In reply to luminoso from comment #47)
> For anyone finding this a quick workaround was to set animation speed to 1/2
> or to 3/4

It works for me! \o/
Thank you very much.
Comment 49 Nicolas Fella 2025-05-14 19:33:57 UTC
Git commit 7fce146a91c625901115c60b4a2d5927d1675667 by Nicolas Fella, on behalf of Noah Davis.
Committed on 14/05/2025 at 19:30.
Pushed by nicolasfella into branch 'Frameworks/6.14'.

WheelHandler: remove std::clamp assert crash
(cherry picked from commit d373ee15e51a42a110309baed6c321126d5acfeb)

M  +3    -3    src/wheelhandler.cpp

https://invent.kde.org/frameworks/kirigami/-/commit/7fce146a91c625901115c60b4a2d5927d1675667
Comment 50 Nicolas Fella 2025-05-14 19:33:59 UTC
Git commit f41f0e908aaa640c2c7431848194e650d225437d by Nicolas Fella, on behalf of Noah Davis.
Committed on 14/05/2025 at 19:30.
Pushed by nicolasfella into branch 'Frameworks/6.14'.

WheelHandler: remove std::clamp assert crash part 2
(cherry picked from commit 54a92465b5ddcd55a5dfdd16c5215ad0769615fc)

M  +1    -1    src/wheelhandler.cpp

https://invent.kde.org/frameworks/kirigami/-/commit/f41f0e908aaa640c2c7431848194e650d225437d
Comment 51 Nate Graham 2025-05-15 14:21:35 UTC
*** Bug 504245 has been marked as a duplicate of this bug. ***
Comment 52 Nate Graham 2025-05-15 14:43:13 UTC
*** Bug 504262 has been marked as a duplicate of this bug. ***
Comment 53 Noah Davis 2025-05-15 16:40:47 UTC
*** Bug 504261 has been marked as a duplicate of this bug. ***
Comment 54 cwo 2025-05-17 05:45:43 UTC
*** Bug 504378 has been marked as a duplicate of this bug. ***
Comment 55 Mr BEEDELL Roke Julian Lockhart 2025-05-18 17:46:13 UTC
*** Bug 504480 has been marked as a duplicate of this bug. ***
Comment 56 Mr BEEDELL Roke Julian Lockhart 2025-05-18 17:46:16 UTC
*** Bug 504481 has been marked as a duplicate of this bug. ***
Comment 57 Mr BEEDELL Roke Julian Lockhart 2025-05-18 17:46:20 UTC
*** Bug 504479 has been marked as a duplicate of this bug. ***
Comment 58 Mr BEEDELL Roke Julian Lockhart 2025-05-18 17:46:24 UTC
*** Bug 504478 has been marked as a duplicate of this bug. ***
Comment 59 Mr BEEDELL Roke Julian Lockhart 2025-05-18 17:46:27 UTC
*** Bug 504477 has been marked as a duplicate of this bug. ***