WheelHandler: remove std::clamp assert crash

BUG: 503703